Send POST request with user FB id upon login

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -39,8 +39,7 @@
       if (response.status === 'connected') {
         // Logged into your app and Facebook.
         testAPI();
-        var loginState = response.status;
-        console.log('here',loginState);
+        console.log('response is...', response);
       } else if (response.status === 'not_authorized') {
         // The person is logged into Facebook, but not your app.
         document.getElementById('status').innerHTML = 'Please log ' +
@@ -107,6 +106,7 @@
         console.log('Successful login for: ', response);
         document.getElementById('status').innerHTML =
           'Thanks for logging in, ' + response.name + '!';
+        $.post('/newUser', response.id);
       });
     }
   </script>
