--- a/client/www/index.html
+++ b/client/www/index.html
@@ -25,6 +25,7 @@
     <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
     <script>
         var socket = io();
+            socket.emit('onJoin', queryStringValues[room]);
     </script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
@@ -116,6 +117,23 @@
         });
       });
     }
+
+    function getUrlVars () {
+      var vars = [], hash;
+      var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+      for(var i = 0; i < hashes.length; i++)
+      {
+          hash = hashes[i].split('=');
+          vars.push(hash[0]);
+          vars[hash[0]] = hash[1];
+      }
+      return vars;
+    }
+
+    var queryStringValues = getUrlVars();
+
+    socket.emit('onJoin', queryStringValues[room]);
+
   </script>
   </head>
   <body>
