--- a/client/www/index.html
+++ b/client/www/index.html
@@ -24,8 +24,20 @@
     <script src="https://connect.soundcloud.com/sdk/sdk-3.0.0.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
     <script>
-        var socket = io();
-            socket.emit('onJoin', queryStringValues[room]);
+      var socket = io();
+      function getUrlVars () {
+        var vars = [], hash;
+        var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+        for(var i = 0; i < hashes.length; i++)        {
+            hash = hashes[i].split('=');
+            vars.push(hash[0]);
+            vars[hash[0]] = hash[1];
+        }
+        return vars;
+      }
+
+    var queryStringValues = getUrlVars();
+
     </script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
@@ -118,21 +130,7 @@
       });
     }
 
-    function getUrlVars () {
-      var vars = [], hash;
-      var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
-      for(var i = 0; i < hashes.length; i++)
-      {
-          hash = hashes[i].split('=');
-          vars.push(hash[0]);
-          vars[hash[0]] = hash[1];
-      }
-      return vars;
-    }
 
-    var queryStringValues = getUrlVars();
-
-    socket.emit('onJoin', queryStringValues[room]);
 
   </script>
   </head>
