--- a/client/www/index.html
+++ b/client/www/index.html
@@ -42,8 +42,7 @@
     </script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/spotifyController.js"></script>
+    <script src="js/controllers.js"></script> 
     <script type="text/javascript" src="lib/angular-soundmanager2/dist/angular-soundmanager2-Q.js"></script>
     <script>
     // This is called with the results from from FB.getLoginStatus().
@@ -153,4 +152,5 @@
          <ion-nav-view></ion-nav-view>
     </ion-pane>
   </body>
+  <script src="js/spotify.js"></script>
 </html>
